--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <link rel="icon" href="img/favicon.ico">
+    <link rel="icon" href="{{ site.github.url }}/img/favicon.ico">
     <title>{{ page.title }}</title>
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ site.github.url }}/css/bootstrap.min.css" rel="stylesheet">
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="{{ site.github.url }}/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="{{ site.github.url }}/css/index.css" rel="stylesheet">
 </head>
@@ -49,7 +49,7 @@
     </div>
     <!-- /.container -->
     <footer>
-        © 2017 Chia-Ying Lin. Powered by Jekyll and bootstrap.
+        © 2017 ChiaYing Lin. Powered by Jekyll and bootstrap.
     </footer>
     <!-- Bootstrap core JavaScript
     ================================================== -->
