add google analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,8 @@
     <link href="{{ site.github.url }}/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="{{ site.github.url }}/css/index.css" rel="stylesheet">
+    <!-- google analytics-->
+    {% include analytics.html %}
 </head>
 
 <body>
