--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,70 +1,15 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <link rel="icon" href="{{ site.github.url }}/img/favicon.ico">
-    <title>{{ page.title }}</title>
-    <!-- Bootstrap core CSS -->
-    <link href="{{ site.github.url }}/css/bootstrap.min.css" rel="stylesheet">
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="{{ site.github.url }}/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
-    <link href="{{ site.github.url }}/css/index.css" rel="stylesheet">
-    <!-- google analytics-->
-    {% include analytics.html %}
-</head>
+{% include head.html %}
 
 <body>
-    <nav>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <!-- The collapse button in xs -->
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <!--Nav title-->
-                <a class="navbar-brand" href="#">ChiaYing Lin</a>
-            </div>
-            <!--Nav bar-->
-            <div id="navbar" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="#education">Education</a></li>
-                    <li><a href="#experience">Experience</a></li>
-                    <li><a href="#publication">Publication</a></li>
-                    <li><a href="#awards">Awards</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                </ul>
-            </div>
-            <!--/.nav-collapse -->
-        </div>
-    </nav>
+    {% include header.html %}
     <div class="container">
         {{ content }}
     </div>
+    {% include footer.html %}
     <!-- /.container -->
-    <footer>
-        © 2017 ChiaYing Lin. Powered by Jekyll and bootstrap.
-    </footer>
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>
-    window.jQuery || document.write('<script src="{{ site.github.url }}/js/jquery.min.js"><\/script>')
-    </script>
-    <script src="{{ site.github.url }}/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="{{ site.github.url }}/js/ie10-viewport-bug-workaround.js"></script>
-    <!-- content -->
-    <script src="{{ site.github.url }}/js/resume.js"></script>
+    {% include scripts.html %}
 </body>
 
 </html>
