add disqus for comments

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -10,3 +10,5 @@ window.jQuery || document.write('<script src="{{ site.github.url }}/js/jquery.mi
 <script src="{{ site.github.url }}/js/ie10-viewport-bug-workaround.js"></script>
 <!-- content -->
 <script src="{{ site.github.url }}/js/resume.js"></script>
+<!-- discus script -->
+<script id="dsq-count-scr" src="//zeroplusone.disqus.com/count.js" async></script>
