--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,4 +7,9 @@ layout: default
 <div class="post">
     {{ content }}
 </div>
+<!-- Post comments -->
+<div class="notecomments">
+    {% include disqus.html %}
+</div>
+
 
