revise disqus setting

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
     {{ content }}
 </div>
 <!-- Post comments -->
-<div class="notecomments">
+<div class="comments">
     {% include disqus.html %}
 </div>
 
