rendering of resume transfer from js to Liquid

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -9,6 +9,6 @@ window.jQuery || document.write('<script src="{{ site.github.url }}/js/jquery.mi
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="{{ site.github.url }}/js/ie10-viewport-bug-workaround.js"></script>
 <!-- content -->
-<script src="{{ site.github.url }}/js/resume.js"></script>
+<!-- <script src="{{ site.github.url }}/js/resume.js"></script> -->
 <!-- discus script -->
 <script id="dsq-count-scr" src="//zeroplusone.disqus.com/count.js" async></script>
