--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="#education">Education</a></li>
                 <li><a href="#experience">Experience</a></li>
-                <li><a href="#publication">Publication</a></li>
+                <li><a href="#publications">Publication</a></li>
                 <li><a href="#awards">Awards</a></li>
                 <li><a href="#projects">Projects</a></li>
             </ul>
