--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-    © 2017 ChiaYing Lin. Powered by Jekyll and bootstrap.
+    <span class="site-footer-credits">© 2017 ChiaYing Lin. Powered by Jekyll and bootstrap.</span>
 </footer>
