--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,17 +1,27 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<section class="page-header">
+    <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
+    <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2> 
+    <a href="{{ site.url }}" class="btn">About me</a>
+    <a href="{{ site.github.url }}/blog/" class="btn">Blog</a>
+    {% if site.github.is_project_page %}
+    <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a> {% endif %} {% if site.show_downloads %}
+    <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
+    <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a> {% endif %}
+</section>
+<!--<nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <!-- The collapse button in xs -->
+            <!- The collapse button in xs ->
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <!--Nav title-->
+            <!-Nav title->
             <a class="navbar-brand" href="#">ChiaYing Lin</a>
         </div>
-        <!--Nav bar-->
+        <!-Nav bar->
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="#education">Education</a></li>
@@ -21,6 +31,9 @@
                 <li><a href="#projects">Projects</a></li>
             </ul>
         </div>
-        <!--/.nav-collapse -->
+        <!-/.nav-collapse ->
     </div>
 </nav>
+-->
+<!-- Cayman theme -->
+
