--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,13 +1,14 @@
 <!-- Bootstrap core JavaScript
     ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script>
 window.jQuery || document.write('<script src="{{ site.github.url }}/js/jquery.min.js"><\/script>')
 </script>
-<script src="{{ site.github.url }}/js/bootstrap.min.js"></script>
+<script src="{{ site.github.url }}/js/bootstrap.min.js"></script> -->
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="{{ site.github.url }}/js/ie10-viewport-bug-workaround.js"></script>
+<!-- <script src="{{ site.github.url }}/js/ie10-viewport-bug-workaround.js"></script>
+ -->
 <!-- content -->
 <!-- <script src="{{ site.github.url }}/js/resume.js"></script> -->
 <!-- discus script -->
