--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-    © 2017 ChiaYing Lin. Powered by Jekyll and bootstrap.
+    © 2017 ChiaYing Lin. Powered by Jekyll. Icon made by Freepik from www.flaticon.com
 </footer>
