--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -13,3 +13,6 @@ window.jQuery || document.write('<script src="{{ site.github.url }}/js/jquery.mi
 <!-- <script src="{{ site.github.url }}/js/resume.js"></script> -->
 <!-- discus script -->
 <script id="dsq-count-scr" src="//zeroplusone.disqus.com/count.js" async></script>
+<!--jekyll uno-->
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script type="text/javascript" src="{{ site.github.url}}/js/main.js?{{site.time | date: '%s%N'}}"></script>
