--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-    <span class="site-footer-credits">© 2017 ChiaYing Lin. Powered by Jekyll and bootstrap. Icon made by Freepik from www.flaticon.com </span>
+    <span class="footer__copyright">&copy; {{ site.time | date: '%Y' }} ChiaYing Lin. Powered by Jekyll. Icon made by Freepik from www.flaticon.com </span>
 </footer>
