add progile picture

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <!-- <link href="{{ site.github.url }}/css/ie10-viewport-bug-workaround.css" rel="stylesheet"> -->
     <!-- Custom styles for this template -->
-    <!-- <link href="{{ site.github.url }}/css/index.css" rel="stylesheet"> -->
+    <link href="{{ site.github.url }}/css/index.css" rel="stylesheet">
     <!-- google analytics-->
     {% include analytics.html %}
 
