--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,8 @@
 <section class="page-header">
-    <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
+    <img id="profile-picture" src="{{site.github.url}}/img/profile.jpg">
+    <div id="project-name">
+        <h1  class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
+    </div>
     <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2> 
     <a href="{{ site.url }}" class="btn">About me</a>
     <a href="{{ site.github.url }}/blog/" class="btn">Blog</a>
