--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-body {
+/*body {
   padding-top: 50px;
 }
 .starter-template {
@@ -9,8 +9,16 @@ body {
 img {
     max-width: 100%;
     max-height: 100%;
+}*/
+
+#profile-picture{ 
+    height: 5rem;
+    border-radius: 50%;
+    display: inline-block;
+    vertical-align: middle;
 }
 
-#profile-picture{
-    height: 50vh;
+#project-name{
+    display: inline-block;
+    vertical-align: middle;
 }
