update about me and add CV download link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,7 @@
     </div>
     <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2> 
     <a href="{{ site.url }}" class="btn">About me</a>
+    <a href="{{ site.github.url }}/doc/CV.pdf" class="btn">CV download</a>
     <a href="{{ site.github.url }}/blog/" class="btn">Blog</a>
     {% if site.github.is_project_page %}
     <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a> {% endif %} {% if site.show_downloads %}
