add contact information

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,4 +19,7 @@
     <meta name="theme-color" content="#157878">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ site.github.url }}/css/style.css">
+
+    <!-- font awesome for icons -->
+    <link rel="stylesheet" href="{{ site.github.url }}/font-awesome/css/font-awesome.min.css">
 </head>
