--- a/css/style.scss
+++ b/css/style.scss
@@ -2,4 +2,9 @@
 
 ---
 
-@import 'jekyll-theme-cayman'
+@import 'jekyll-theme-cayman';
+
+.page-header {
+  background-color: #5ca4ec;
+  background-image: linear-gradient(120deg, #5ca4ec, #991570);
+}
