modify colors, add tags and categories

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<section class="page-header">
+<section id="custom-page-header" class="page-header">
     <img id="profile-picture" src="{{site.github.url}}/img/profile.jpg">
     <div id="project-name">
         <h1  class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
