--- a/css/index.css
+++ b/css/index.css
@@ -1,44 +1,137 @@
-/*body {
-  padding-top: 50px;
-}
-.starter-template {
-  padding: 40px 15px;
-  text-align: center;
+#custom-page-header {
+    padding: 1rem 1rem;
 }
 
-img {
-    max-width: 100%;
-    max-height: 100%;
-}*/
-
-#profile-picture{ 
+#profile-picture {
     height: 5rem;
     border-radius: 50%;
     display: inline-block;
     vertical-align: middle;
 }
 
-#project-name{
+#project-name {
     display: inline-block;
     vertical-align: middle;
 }
 
-.contact{
-  margin-bottom: 1rem;
+.contact {
+    margin-bottom: 1rem;
 }
 
-.contact a{
-  color: white;
+.contact a {
+    color: white;
 }
 
-i{
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-  opacity: 0.7;
+i {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    opacity: 0.7;
 }
 
-i:hover{
-  opacity: 1;
+i:hover {
+    opacity: 1;
 }
 
+.post-tag {
+    display: inline-block;
+    background: rgba(106, 159, 181, 0.15);
+    padding: 0.5rem;
+    margin-right: .5rem;
+    border-radius: 4px;
+    color: #6a9fb5;
+    font-family: "PT Sans", Helvetica, Arial, sans-serif;
+    font-size: 90%;
+}
 
+.post-tag:hover {
+    text-decoration: none;
+    background: #6a9fb5;
+    color: #ffffff;
+}
+
+.tags-expo {
+     :target:before {
+        content: "";
+        display: block;
+        height: 72px;
+        /* fixed header height*/
+        margin: -72px 0 0;
+        /* negative fixed header height */
+    }
+    .tags-expo-list {
+        @media (min-width: 38em) {
+            font-size: 0.9rem;
+            .post-tag {
+                margin: .2em .3em;
+            }
+        }
+    }
+    .tags-expo-section {
+        ul {
+            list-style-type: circle;
+            list-style-position: inside;
+            padding: 0;
+            li {
+                padding: 0 1rem;
+                &:hover {
+                    list-style-type: disc;
+                    padding: 0 .5rem;
+                }
+            }
+        }
+        a {
+            text-decoration: none;
+        }
+        font-family: "PT Sans",
+        Helvetica,
+        Arial,
+        sans-serif;
+        ;
+    }
+}
+
+.post-index {
+    list-style-type: none;
+}
+
+#posts-index-title {
+  color: #1e6bb8;
+  margin-bottom: 0.3rem;
+  font-weight: bold;
+  font-size: 1.5em;
+}
+
+.post-date {
+    display: inline-block;
+    font-size: 80%;
+    color: #9a9a9a;
+    margin: 0;
+    padding: 0;
+}
+
+.tags-expo-posts {
+    list-style-type: none;
+}
+
+.blog-title {
+  margin-bottom: 0rem;
+}
+
+.all-tags-cat{
+    display: inline-block;
+    background: rgba(101, 104, 111, 0.19);
+    padding: 0.2rem;
+    margin-right: .5rem;
+    margin-top: .5rem;
+    margin-bottom: .5rem;
+    border-radius: 4px;
+    color: #000000;
+    font-family: "PT Sans", Helvetica, Arial, sans-serif;
+    font-size: 1em;
+}
+
+.all-tags-cat:hover {
+    text-decoration: none;
+    background: rgb(78, 81, 88);
+    color: #ffffff;
+}
