revise wrong unit

--- a/css/index.css
+++ b/css/index.css
@@ -143,7 +143,7 @@ i:hover {
   border-style:dotted solid;
   border-color:#c3c3c3;
   margin-top: .5rem;
-  margin-bottom: .5rrem;
+  margin-bottom: .5rem;
 }
 
 .post-block:hover{
