--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <section id="custom-page-header" class="page-header">
     <img id="profile-picture" src="{{site.github.url}}/img/profile.jpg">
     <div id="project-name">
-        <h1  class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
+        <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
     </div>
-<!--     <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>  -->
+    <!--     <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>  -->
     <div class="contact">
         <!-- <a href="http://fb.me/{{ site.author.facebook_username }}"><i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></a> -->
         <a href="https://www.github.com/{{ site.author.github_username }}"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
@@ -12,8 +12,7 @@
     </div>
     <a href="{{ site.url }}" class="btn">About me</a>
     <a href="{{ site.github.url }}/doc/CV.pdf" class="btn">CV download</a>
-    <a href="{{ site.github.url }}/blog/" class="btn">Blog</a>
-    {% if site.github.is_project_page %}
+    <a href="{{ site.github.url }}/blog/" class="btn">Blog</a> {% if site.github.is_project_page %}
     <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a> {% endif %} {% if site.show_downloads %}
     <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
     <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a> {% endif %}
@@ -46,4 +45,3 @@
 </nav>
 -->
 <!-- Cayman theme -->
-
